--- a/formatting.css
+++ b/formatting.css
@@ -49,8 +49,8 @@ body {
 }
 
 .lineHorizontal {
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
+    border-top: 1px var(--fl2);
+    border-bottom: 1px var(--fl2);
     width: 100%;
     height: 5px;
 }
