--- a/formatting.css
+++ b/formatting.css
@@ -49,8 +49,8 @@ body {
 }
 
 .lineHorizontal {
-    border-top: 1px var(--fl2);
-    border-bottom: 1px var(--fl2);
+    border-top: 1px solid var(--fl2); /* Added 'solid' for the border style */
+    border-bottom: 1px solid var(--fl2); /* Added 'solid' for the border style */
     width: 100%;
     height: 5px;
 }
