--- a/formatting.css
+++ b/formatting.css
@@ -67,19 +67,19 @@ body {
     background: #45a049;
 }
 
-table th {
+.maintTable th {
     background: var(--hr2);
     color: var(--hr2_rv);
     padding: 8px;
     text-align: left;
 }
 
-table tr:nth-child(odd) {
+.maintTable tr:nth-child(odd) {
     background: var(--hr1_rv);
     color: var(--hr1);
 }
 
-table tr:nth-child(even) {
+.maintTable tr:nth-child(even) {
     background: var(--hr2_rv);
     color: var(--hr2);
 }
