--- a/formatting.css
+++ b/formatting.css
@@ -96,7 +96,7 @@ body {
     width: 95%;
 }
 
-.flex-child-element {
+.flex-child-element-centered {
     flex: 1;
     border: 2px solid var(--fl1_rv);
     margin: 10px;
@@ -105,6 +105,12 @@ body {
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center;    /* Center vertically */
+}
+
+.flex-child-element {
+    flex: 1;
+    border: 2px solid var(--fl1_rv);
+    margin: 10px;
 }
 
 .flex-child-element:first-child {
