--- a/formatting.css
+++ b/formatting.css
@@ -132,4 +132,6 @@ body {
 
 .button {
     background-color: var(--tn1_rv);
+    box-shadow:0 8px 16px 0 rgba(0,0,0,0.6);
+    border-radius: 12px;
 }
