--- a/formatting.css
+++ b/formatting.css
@@ -51,7 +51,7 @@ body {
 .lineHorizontal {
     border-top: 2px solid var(--fl2); /* Top border */
     border-bottom: 2px solid var(--fl2); /* Bottom border */
-    width: 100%;
+    width: auto;
     height: 5px;
 }
 
@@ -132,6 +132,6 @@ body {
 
 .button {
     background-color: var(--tn1_rv);
-    box-shadow:0 8px 16px 0 rgba(0,0,0,0.6);
-    border-radius: 12px;
+    box-shadow:0 16px 24px 0 rgba(0,0,0,0.6);
+    border-radius: 20px;
 }
