attempt to have a tip on hover

--- a/formatting.css
+++ b/formatting.css
@@ -132,6 +132,32 @@ body {
 
 .button {
     background-color: var(--tn1_rv);
-    box-shadow:0 16px 24px 0 rgba(0,0,0,0.6);
+    box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.6);
     border-radius: 20px;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+    cursor: pointer;
+}
+
+.tooltiptext {
+    visibility: hidden;
+    width: 130px;
+    background-color: black;
+    color: #ffffff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 65%;
+    margin-left: -65px;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
