--- a/formatting.css
+++ b/formatting.css
@@ -136,3 +136,16 @@ body {
     box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.6);
     border-radius: 20px;
 }
+
+.form-table {
+    width: 100%;
+}
+
+.form-table td {
+    padding: 5px;
+    vertical-align: middle;
+}
+
+.form-table label {
+    font-weight: bold;
+}
