changed line color

--- a/formatting.css
+++ b/formatting.css
@@ -49,7 +49,7 @@
     --main_background:      var(--c64-purple);
     --main_text:            var(--c64-lt-purple);
 
-    --line-color:           var(--c64-pink);
+    --line-color:           var(--c64-beige);
 
     --button-background:        var(--c64-lt-purple);
     --button-color:             var(--c64-lt-gray);
